# AIGrader

./: README.md  assignments.csv
database/: AI Grader ERD P1.erdplus  AI Grader ERD.erdplus
eclipse-workspace/: .gitignore
eclipse-workspace/aigrader/: pyproject.toml
eclipse-workspace/aigrader-test/: driver.py
eclipse-workspace/aigrader.SAVE/src/aigrader/: __init__.py  assessment_comment.py  exceptions.py  extract_docx.py  prompt_builder.py  score_parser.py
eclipse-workspace/aigrader.SAVE/src/aigrader/canvas/: client.py
eclipse-workspace/aigrader.SAVE/src/aigrader/llm/: __init__.py
eclipse-workspace/aigrader/src/aigrader/: __init__.py  assessment_comment.py  batch.py  config.py  exceptions.py  formatting.py  grader.py  idempotency.py  prompt_builder.py  score_parser.py  technical_prompt.py  textutil.py
eclipse-workspace/aigrader/src/aigrader/canvas/: __init__.py  client.py
eclipse-workspace/aigrader/src/aigrader/cli/: __init__.py  main.py
eclipse-workspace/aigrader/src/aigrader/llm/: llm_client.py
eclipse-workspace/util/: gen_rubric_1.py  gen_rubric_2.py  gen_rubric_3.py
prompts/: assignment_364682_prompt.txt  assignment_368044_prompt.txt  initial_prompt.txt
scripts/: run_aigrader.sh
